--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -54,7 +54,7 @@
   --#{$nav}__item__toggle-icon--Rotate: 0;
   --#{$nav}__item--m-expanded__toggle-icon--Rotate: 90deg;
   --#{$nav}__item__toggle-icon--TransitionDuration--transform: var(--pf-t--global--motion--duration--icon--default);
-
+  --#{$nav}__item__toggle-icon--TransitionTimingFunction--transform: var(--pf-t--global--motion--timing-function--default);
 
   // * Nav link
   --#{$nav}__link--ColumnGap: var(--pf-t--global--spacer--sm);
@@ -82,10 +82,12 @@
 
   // * Nav subnav
   --#{$nav}__subnav--RowGap: var(--pf-t--global--border--width--extra-strong);
+  --#{$nav}__subnav--PaddingBlockStart: var(--#{$nav}__subnav--RowGap);
+  --#{$nav}__subnav--PaddingBlockEnd: var(--#{$nav}__subnav--RowGap);
   --#{$nav}__subnav--PaddingInlineStart: var(--pf-t--global--spacer--md);
   --#{$nav}__subnav--TransitionDuration--grid-template-rows: 0s; // no slide by default
   --#{$nav}__subnav--TransitionTimingFunction--grid-template-rows: var(--pf-t--global--motion--timing-function--default);
-
+  
   @media (prefers-reduced-motion: no-preference) {
     --#{$nav}__subnav--TransitionDuration--grid-template-rows: var(--pf-t--global--motion--duration--slide-in--default);
     --#{$nav}__subnav--hidden--TransitionDuration--grid-template-rows: var(--pf-t--global--motion--duration--slide-in--short);
@@ -189,7 +191,7 @@
 [class^="#{$nav}"][hidden] {
   visibility: hidden;
 
-  & .#{$nav}__list {
+  .#{$nav}__list {
     --#{$nav}__list--TransitionDuration--opacity: var(--#{$nav}__list--hidden--TransitionDuration--opacity);
 
     opacity: 0;
@@ -217,7 +219,6 @@
   transition-timing-function: var(--#{$nav}__list--TransitionTimingFunction--opacity);
   transition-duration: var(--#{$nav}__list--TransitionDuration--opacity);
   transition-property: opacity;
-  transition-behavior: allow-discrete;
 
   @starting-style {
     opacity: 0;
@@ -230,14 +231,13 @@
 
   grid-template-rows: 1fr;
   min-height: 0;
-  padding-block-start: 0;
-  padding-block-end: 0;
+  padding-block-start: var(--#{$nav}__subnav--PaddingBlockStart);
+  padding-block-end: var(--#{$nav}__subnav--PaddingBlockEnd);
   padding-inline-start: var(--#{$nav}__subnav--PaddingInlineStart); // indent nested lists
   overflow-y: clip;
   transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows);
   transition-duration: var(--#{$nav}__subnav--TransitionDuration--grid-template-rows);
   transition-property: grid-template-rows, padding-block-start;
-  transition-behavior: allow-discrete; 
   
   @starting-style {
     grid-template-rows: 0fr;
@@ -245,6 +245,8 @@
 
   &[hidden] {
     --#{$nav}__subnav--TransitionDuration--grid-template-rows: var(--#{$nav}__subnav--hidden--TransitionDuration--grid-template-rows);
+    --#{$nav}__subnav--PaddingBlockStart: 0;
+    --#{$nav}__subnav--PaddingBlockEnd: 0;
 
     grid-template-rows: 0fr;
   }
@@ -264,14 +266,12 @@
     }
   }
 
-  &.pf-m-expanded {
-    // duration for collapsing needs to set the property rather than the variable because of nested items
-    transition-duration: var(--#{$nav}__item--m-expanded--TransitionDuration--row-gap); 
+  &.pf-m-expanded { 
+    --#{$nav}__subnav--PaddingBlockStart: var(--#{$nav}__item--RowGap);
+    --#{$nav}__subnav--PaddingBlockEnd: var(--#{$nav}__item--RowGap);
 
-    & > .#{$nav}__subnav {
-      padding-block-start: var(--#{$nav}__item--RowGap);
-      padding-block-end: var(--#{$nav}__item--RowGap);
-    }
+    // duration for collapsing needs to set the property rather than the variable because of nested items
+    transition-duration: var(--#{$nav}__item--m-expanded--TransitionDuration--row-gap);
   }
 }
 
@@ -354,6 +354,7 @@
 // - Nav toggle icon
 .#{$nav}__toggle-icon {
   display: inline-block;
+  transition-timing-function: var(--#{$nav}__item__toggle-icon--TransitionTimingFunction--transform);
   transition-duration: var(--#{$nav}__item__toggle-icon--TransitionDuration--transform);
   transition-property: transform;
   transform: rotate(var(--#{$nav}__item__toggle-icon--Rotate));
