--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -29,11 +29,6 @@
   --#{$nav}__list--ScrollSnapType: var(--#{$nav}__list--ScrollSnapTypeAxis) var(--#{$nav}__list--ScrollSnapTypeStrictness);
   --#{$nav}__item--ScrollSnapAlign: end;
 
-  // Nav list animation variables
-  --#{$nav}__list--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--default); // match the duration of the slide open
-  --#{$nav}__list--hidden--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--short);
-  --#{$nav}__list--TransitionTimingFunction--opacity: var(--pf-t--global--motion--timing-function--default);
-
   // * Nav section title
   --#{$nav}__section-title--FontWeight: var(--pf-t--global--font--weight--body--bold);
   --#{$nav}__section-title--Color: var(--pf-t--global--text--color--regular);
@@ -45,10 +40,6 @@
   // * Nav item
   --#{$nav}__item--RowGap: var(--#{$nav}__list--RowGap);
   --#{$nav}__item--m-expanded--TransitionDuration--row-gap: 0;
-
-  @media (prefers-reduced-motion: no-preference) {
-    --#{$nav}__item--m-expandedTransitionDuration--row-gap: var(--pf-t--global--motion--duration--slide-in--default);
-  }
 
   // * Nav item toggle icon
   --#{$nav}__item__toggle-icon--Rotate: 0;
@@ -86,8 +77,11 @@
   --#{$nav}__subnav--PaddingBlockEnd: var(--#{$nav}__item--RowGap);
   --#{$nav}__subnav--PaddingInlineStart: var(--pf-t--global--spacer--md);
   --#{$nav}__subnav--TransitionDuration--grid-template-rows: 0s; // no slide by default
+  --#{$nav}__subnav--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--default); // match the duration of the slide open
+  --#{$nav}__subnav--hidden--TransitionDuration--opacity: var(--pf-t--global--motion--duration--slide-in--short);
   --#{$nav}__subnav--TransitionTimingFunction--grid-template-rows: var(--pf-t--global--motion--timing-function--default);
-  
+  --#{$nav}__subnav--TransitionTimingFunction--opacity: var(--pf-t--global--motion--timing-function--default);
+
   @media (prefers-reduced-motion: no-preference) {
     --#{$nav}__subnav--TransitionDuration--grid-template-rows: var(--pf-t--global--motion--duration--slide-in--default);
     --#{$nav}__subnav--hidden--TransitionDuration--grid-template-rows: var(--pf-t--global--motion--duration--slide-in--short);
@@ -190,12 +184,6 @@
 
 [class^="#{$nav}"][hidden] {
   visibility: hidden;
-
-  .#{$nav}__list {
-    --#{$nav}__list--TransitionDuration--opacity: var(--#{$nav}__list--hidden--TransitionDuration--opacity);
-
-    opacity: 0;
-  }
 }
 
 // Magic value calcs
@@ -215,10 +203,6 @@
   row-gap: var(--#{$nav}__list--RowGap);
   column-gap: var(--#{$nav}__list--ColumnGap);
   min-height: 0;
-  opacity: 1;
-  transition-timing-function: var(--#{$nav}__list--TransitionTimingFunction--opacity);
-  transition-duration: var(--#{$nav}__list--TransitionDuration--opacity);
-  transition-property: opacity;
 }
 
 // - Nav subnav
@@ -231,16 +215,18 @@
   padding-block-end: var(--#{$nav}__subnav--PaddingBlockEnd);
   padding-inline-start: var(--#{$nav}__subnav--PaddingInlineStart); // indent nested lists
   overflow-y: clip;
-  transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows);
-  transition-duration: var(--#{$nav}__subnav--TransitionDuration--grid-template-rows);
-  transition-property: grid-template-rows, padding-block-start, padding-block-end;
+  transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows), var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows), var(--#{$nav}__subnav--TransitionTimingFunction--grid-template-rows), var(--#{$nav}__subnav--TransitionTimingFunction--opacity);
+  transition-duration: var(--#{$nav}__subnav--TransitionDuration--grid-template-rows), var(--#{$nav}__subnav--TransitionDuration--grid-template-rows), var(--#{$nav}__subnav--TransitionDuration--grid-template-rows), var(--#{$nav}__subnav--TransitionDuration--opacity);
+  transition-property: grid-template-rows, padding-block-start, padding-block-end, opacity;
   
   &[hidden] {
     --#{$nav}__subnav--TransitionDuration--grid-template-rows: var(--#{$nav}__subnav--hidden--TransitionDuration--grid-template-rows);
     --#{$nav}__subnav--PaddingBlockStart: 0;
     --#{$nav}__subnav--PaddingBlockEnd: 0;
+    --#{$nav}__subnav--TransitionDuration--opacity: var(--#{$nav}__subnav--hidden--TransitionDuration--opacity);
 
     grid-template-rows: 0fr;
+    opacity: 0;
   }
 }
 
