chore(tabs): add no-animate class for react, prevent default on link click

--- a/src/patternfly/components/Tabs/tabs-link.hbs
+++ b/src/patternfly/components/Tabs/tabs-link.hbs
@@ -18,6 +18,7 @@
     {{/if}}
   {{/if}}
   onClick="
+    event.preventDefault();
     ((e) => {
       const el = this,
             li = this.closest('li'),
