chore(tab-content): revert CSS path - just move docs

--- a/src/patternfly/components/_index.scss
+++ b/src/patternfly/components/_index.scss
@@ -63,12 +63,12 @@
 @use "./Slider/slider";
 @use "./Spinner/spinner";
 @use "./Switch/switch";
+@use "./TabContent/tab-content";
 @use "./Table/table-grid";
 @use "./Table/table";
 @use "./Table/table-scrollable";
 @use "./Table/table-tree-view";
 @use "./Tabs/tabs";
-@use "./Tabs/tab-content";
 @use "./TextInputGroup/text-input-group";
 @use "./Tile/tile";
 @use "./Timestamp/timestamp";
